--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,14 @@
 cmake_minimum_required(VERSION 3.19.0 FATAL_ERROR)
 
 set(MBED_PATH ${CMAKE_CURRENT_SOURCE_DIR}/mbed-os CACHE INTERNAL "")
+set(DAC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/dac8352 CACHE INTERNAL "")
 set(MBED_CONFIG_PATH ${CMAKE_CURRENT_BINARY_DIR} CACHE INTERNAL "")
 set(APP_TARGET mbed-os-example-blinky)
 
 include(${MBED_PATH}/tools/cmake/app.cmake)
 
 add_subdirectory(${MBED_PATH})
+add_subdirectory(${DAC_PATH})
 
 add_executable(${APP_TARGET})
 
@@ -19,6 +21,7 @@ project(${APP_TARGET})
 
 target_sources(${APP_TARGET}
     PRIVATE
+        dac8352
         main.cpp
 )
 
